--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "notion-client": "^4",
     "notion-to-md": "2.5.5",
     "path": "^0.12.7",
-    "ts-node": "^10.2.1",
-    "sanitize-filename": "^1.6.3"
+    "sanitize-filename": "^1.6.3",
+    "ts-node": "^10.2.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
@@ -89,5 +89,6 @@
   },
   "volta": {
     "node": "18.16.0"
-  }
+  },
+  "version": "0.13.1"
 }
