--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "vite": "^4.2.1",
     "vitest": "^0.30.1"
   },
-  "name": "@sillsdev/docu-notion",
+  "name": "@turntable-so/docu-notion",
   "description": "Download Notion pages as markdown and image files, preserving hierarchy and enabling workflow properties. Works with Docusaurus.",
   "license": "MIT",
   "author": {
@@ -90,5 +90,5 @@
   "volta": {
     "node": "18.16.0"
   },
-  "version": "0.14.0"
+  "version": "0.14.1"
 }
